# nvcenter

./: 04102026_checkin (1).ipynb  04172026_checkin.ipynb  250708-21_09_31_attoscanpulsed-extent.csv  NV_info.ipynb  README.md  nv_documentation.ipynb  play_games.ipynb  previous_version.ipynb  pyproject.toml  testnotebook.ipynb
.ipynb_checkpoints/: 04102026_checkin (1)-checkpoint.ipynb  README-checkpoint.md  nv_center-checkpoint.ipynb  pyproject-checkpoint.toml
games/.ipynb_checkpoints/: coins-checkpoint.py
nv/: Analyze.py  __init__.py  fieldStrength.py  mean_fluorescence.py  sample_data.py  unit_test.py  vonMise.py  vonMises.ipynb
nv/.ipynb_checkpoints/: __init__-checkpoint.py  sample_data-checkpoint.py
nv/data/: example_data.csv
nvcenter/: __init__.py  odmr_analysis.py  test_nv.py  unit_test.py
nvcenter/data/: example_data.csv  example_extents.csv
src/: 04172026_checkin.ipynb
src/nv/: 04102026_checkin.ipynb  04172026_checkin.ipynb  dipole_field.py  dipole_field_pt.py  mean_fluorescence_pt.py
src/nv/.ipynb_checkpoints/: 04102026_checkin-checkpoint.ipynb  __init__-checkpoint.py  dipole_field-checkpoint.py  dipole_field_pt-checkpoint.py
src/nvcenter_bchyi.egg-info/: PKG-INFO  SOURCES.txt
