[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nvcenter_bchyi"
version = "0.0.1"
authors = [
  { name="Brandon Chyi", email="bchyi@g.harvard.edu" },
{ name="Addison NewRingeisen", email="addison_newringeisen@g.harvard.edu" }
]
description = "A package to infer parameters of an NV ODMR Contour Scan"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/phys201/nvcenter"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
